[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
root = ".."

[project]
name = "virtbmc-core"
description = "base for drivers used in VirtBMC"
authors = [{ name = "chramb" }]
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["pyghmi"]

[project.optional-dependencies]
all = ["virtbmc_core[dev,test,typing,docs]"]
dev = ["black", "ruff", "isort"]
test = ["pytest"]
typing = ["mypy"]
docs = ["mkdocs-material"]

[project.urls]
Home = "https://github.com/chramb/virtbmc"
