# Build
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flit.sdist]
exclude = [".gitignore"]
include = ["virtbmc_core"]


# Project
[project]
name = "virtbmc-core"
version = "0.0.0"               # TODO: move to hatch do these dynamically
description = "hello"
license = { file = "LICENSE" }
authors = [{ name = "chramb" }]
#dynamic = ["description", "version"]
requires-python = ">=3.8"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = []

[project.urls]
Home = "https://github.com/chramb/vbmc"

[project.scripts]
virtbmcd = "virtbmc_core.cmd.virtbmcd:main"

[project.entry-points."virtbmc.driver"]
dummy = "virtbmc_core.driver.dummy"
