# Build
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flit.sdist]
include = ["./virtbmc_driver_core.py"]

# Project
[project]
name = "virtbmc_driver_core"
version = "0.0.0"                                # TODO: move to hatch do these dynamically
description = "base for drivers used in VirtBMC"
authors = [{ name = "chramb" }]
#dynamic = ["description", "version"]
requires-python = ">=3.8"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["pyghmi"]

[project.urls]
Home = "https://github.com/chramb/virtbmc"
